@@ -2,5 +2,7 @@ v0.0.5
 
 Noteworthy changes:
 
+  * Replaced obsolete gethostbyname() with getaddrinfo()
+
   * If the m2k-minicom.sh script is run from the scripts/ directory, it will
   uses the dev build of modemu2k in src/
